--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -12,7 +12,7 @@
     <h1>Description:</h1>
     <h2>Ingredients:</h2>
     <ul>
-        <li>1 tablespoon vegetable oil</li>
+        <li>1 tablespoon vegetable oilss</li>
         <li>1 small onion, chopped</li>
         <li>1 teaspoon salt</li>
         <li>1 (1/2 inch) piece fresh ginger, chopped</li>
