--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Odin Recipess</h1>
     <ul>
     <li><a href="recipes/adobo.html">ADOBO</a></li>
     <li><a href="recipes/sinigang.html"> SINIGANG</a></li>
