did the css for adobo

--- a/index.html
+++ b/index.html
@@ -13,15 +13,25 @@
 <div class="mgafoods">
     <div class="adobo">
         <img src="recipes/adobo.png" alt="adobo masarap">
-        <p><a href="recipes/adobo.html">ADOBO </a></p>
+        <p class="links"><a href="recipes/adobo.html">ADOBO </a></p>
+        <p class="description">Philippine adobo is a popular Filipino dish and cooking process in Philippine cuisine. 
+            In its base form, meat, seafood, or vegetables are first browned in oil, and then marinated and 
+            simmered in vinegar, salt and/or soy sauce, and garlic</p>
     </div>
     <div class="sinigang">
         <img src="recipes/sinigang.png" alt="sinigang masarap">
-        <p><a href="recipes/sinigang.html">SINIGANG </a></p>
+        <p class="links"><a href="recipes/sinigang.html">SINIGANG </a></p>
+        <p class="description">Sinigang is a Filipino soup or stew characterized by its sour and savory taste. 
+            It is most often associated with tamarind, although it can use other sour fruits and leaves as the 
+            souring agent such as unripe mangoes or rice vinegar. It is one of the more popular dishes in Filipino cuisine</p>
     </div>
     <div class="butteredhipon">
         <img src="recipes/Buttered shrimp.png" alt="hipon masarap">
-        <p><a href="recipes/shrimp.html">BUTTERED HIPON </a></p>
+        <p class="links"><a href="recipes/shrimp.html">BUTTERED HIPON </a></p>
+        <p class="description">Garlic Butter Shrimp is a super easy dish to make. 
+            This recipe shows how to cook this beloved dish the Filipino way. I like how it turned out. 
+            The dish is rich and flavorful. I enjoyed eating it with newly cooked white rice. The use of
+             shrimp with scales and head make this unique from</p>
     </div>
 
     
