--- a/recipes/shrimp.html
+++ b/recipes/shrimp.html
@@ -9,38 +9,27 @@
     <h1>Buttered Shrimp</h1>
     <img src="Buttered shrimp.png" alt="Hipon">
     <h1>Description:</h1>
-    <h2>Seasoning:</h2>
+    <h2>Ingredients:</h2>
     <ul>
-        <li>1 teaspoon smoked paprika</li>
-        <li>½ teaspoon garlic powder</li>
-        <li>½ teaspoon onion powder</li>
-        <li>½ teaspoon salt</li>
-        <li>½ teaspoon dried oregano</li>
-        <li>¼ teaspoon freshly ground black pepper</li>
-        <li>¼ teaspoon cayenne pepper</li>
-        <li>¼ teaspoon dried thyme</li>
-        
+        <li>2 lbs shrimp</li>
+        <li>2 tablespoons parsley</li>
+        <li>1/4 cup butter</li>
+        <li>1 head garlic </li>
+        <li>1 cup lemon lime soda</li>
+        <li>1 teaspoon lemon juice</li>
+        <li>salt and pepper to taste</li>
     </ul>
-    <h2>Shrimp:</h2>
-    <ul>
-        <li>2 pounds extra large shrimp, peeled and deveined</li>
-        <li>2 tablespoons olive oil</li>
-        <li>½ cup butter, cubed and at room temperature</li>
-        <li>2 tablespoons minced fresh parsley (Optional)</li>
-        <li>6 lemon wedges (optional)</li>
-    </ul>
+  
 
     <h1> Steps:</h1>
     <ol>
-        <li>Preheat the oven to 400 degrees F (200 degrees C).</li>
-        <li>Combine smoked paprika, garlic powder, onion powder, salt, oregano, pepper,
-            cayenne pepper, and thyme in a small bowl. Pat shrimp dry and place in a large 
-            bowl. Sprinkle with Cajun seasoning mixture and drizzle with olive oil. Toss to coat evenly.</li>
-        <li>Place shrimp in a single layer on a sheet pan without overcrowding.</li>
-        <li>Cook in the preheated oven until shrimp are opaque in the middle,
-             about 8 minutes. Immediately add butter to the hot pan and toss with
-              shrimp until butter is melted. Sprinkle with parsley, if desired and 
-              serve with lemon wedges.</li>
+        <li>Marinate the shrimp in lemon soda for about 10 minutes</li>
+        <li>Melt the butter in a pan.</li>
+        <li>Add the garlic. Cook in low heat until the color turns light brown</li>
+        <li>Put-in the shrimp. Adjust heat to high. Stir-fry until shrimp turns orange..</li>
+        <li>Season with ground black pepper, salt, and lemon juice. Stir.</li>
+        <li>Add parsley. Cook for 30 seconds.</li>
+        <li>Serve hot. Share and Enjoy!</li>
     </ol>
     
 
