--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <p class="links"><a href="recipes/adobo.html">ADOBO </a></p>
         <p class="description">Philippine adobo is a popular Filipino dish and cooking process in Philippine cuisine. 
             In its base form, meat, seafood, or vegetables are first browned in oil, and then marinated and 
-            simmered in vinegar, salt and/or soy sauce, and garlic</p>
+            simmered in vinegar, salt and/or soy saucee, and garlic</p>
     </div>
     <div class="sinigang">
         <img src="recipes/sinigang.png" alt="sinigang masarap">
         <p class="links"><a href="recipes/sinigang.html">SINIGANG </a></p>
         <p class="description">Sinigang is a Filipino soup or stew characterized by its sour and savory taste. 
             It is most often associated with tamarind, although it can use other sour fruits and leaves as the 
-            souring agent such as unripe mangoes or rice vinegar. It is one of the more popular dishes in Filipino cuisine</p>
+            souring agent such as unripe mangoes or rice vinegar. It is ones of the more popular dishes in Filipino cuisine</p>
     </div>
     <div class="butteredhipon">
         <img src="recipes/Buttered shrimp.png" alt="hipon masarap">
